Fix visibility on gifs

--- a/app/assets/stylesheets/api/channel_view/channel.scss
+++ b/app/assets/stylesheets/api/channel_view/channel.scss
@@ -1,6 +1,7 @@
 .channel-view {
   right: 0;
   left: 200px;
+  height: 96%;
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -42,7 +43,7 @@
 }
 
 .channel-body {
-  height: 760px;
+  height: 88%;
   top: 60px;
   left: 0;
   background-color: white;
@@ -68,7 +69,6 @@
   margin-right: 20px;
   bottom: 0;
   width: 100%;
-  margin-top: 600px;
   position: fixed;
   background-color: white;
 }
