--- a/app/assets/stylesheets/modals/gify_modal.scss
+++ b/app/assets/stylesheets/modals/gify_modal.scss
@@ -11,9 +11,9 @@
 .gify-modal {
   position: relative;
   left: 206px;
-  top: 80px;
+  top: 56px;
   height: 210px;
-  margin-top: 70px;
+  margin-top: 46px;
   width: 300px;
   transform: translate(-50%, -50%);
   font-family: 'Lato', sans-serif;
